mc/overlays/c1-gcp/contacts-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: contacts-remote
spec:
  hosts:
  - contacts
  http:
  - route:
    - destination:
        host: contacts.boa.global
