mc/overlays/c1-gcp/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - match:
    - path: "/"
    route:
    - destination:
        host: frontend
        port:
          number: 80
