mc/overlays/c1-gcp/userservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userservice-remote
spec:
  hosts:
  - userservice
  http:
  - route:
    - destination:
        host: userservice.boa.global
